# FucyfuzzApp

./: .gitignore  README.md  install_fucyfuzz.sh  run_fucyfuzz.py  run_fucyfuzz.sh  run_fucyfuzz_auto.py
Simulator/: README.md  Simulator.spec  add_icon.sh  build_simulator.sh  dashboard.py  requirements.txt  update_simulator.sh
Simulator/hooks/: hook-can.py
Simulator/pyinstaller_hooks/: rthook_patch_rc.py
fucyfuzz/: Fucyfuzz.spec  build_fucyfuzz.sh  dashboard_frame.py  fonts.py  frame_classes.py  import customtkinter as ctk.py  main_app.py  modules.py  report_generators.py  requirements.txt  test.py  test_mdf4.py  ui_scaling.py  update_fucyfuzz.sh
fucyfuzz/failure_cases/: failure_cases.json
fucyfuzz_tool/: CONTRIBUTING.md  README.md  log.txt  pyproject.toml  setup.py
fucyfuzz_tool/documentation/: dcm.md  doip.md  dump.md  fuzzer.md  howtoinstall.md  howtouse.md  listener.md  send.md  troubleshooting.md  uds.md  uds_fuzz.md  xcp.md
fucyfuzz_tool/fucyfuzz/: fucyfuzz.py
fucyfuzz_tool/fucyfuzz/modules/: dcm.py  doip.py  dump.py  fuzzer.py  lenattack.py  listener.py  module_template.py  send.py  test.py  uds.py  uds_fuzz.py  xcp.py
fucyfuzz_tool/fucyfuzz/tests/: test_iso_14229_1.py  test_iso_15765_2.py  test_module_uds.py  test_send.py
fucyfuzz_tool/fucyfuzz/tests/mock/: mock_ecu.py  mock_ecu_iso_tp.py  mock_ecu_uds.py
fucyfuzz_tool/fucyfuzz/utils/: can_actions.py  iso15765_2.py
